add role based authorization example and doc
