# swagger_output.json
@@ -15,6 +15,10 @@
     {
       "name": "Station",
       "description": "Endpoints"
+    },
+    {
+      "name": "User",
+      "description": "Endpoints"
     }
   ],
   "schemes": [
@@ -140,41 +144,25 @@
     "/": {
       "get": {
         "tags": [
-          "Post"
+          "User"
         ],
-        "description": "Endpoint to get all posts",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      },
-      "post": {
-        "tags": [
-          "Post"
-        ],
-        "description": "Endpoint to insert a post",
+        "description": "Endpoint to get all users only Authenticated user is an admin",
         "parameters": [
           {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "title": {
-                  "example": "any"
-                },
-                "description": {
-                  "example": "any"
-                }
-              }
-            }
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
           }
         ],
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
           }
         }
       }
@@ -255,6 +243,95 @@
           }
         }
       }
+    },
+    "/register": {
+      "post": {
+        "tags": [
+          "User"
+        ],
+        "description": "Endpoint to insert a user",
+        "parameters": [
+          {
+            "name": "newUser",
+            "in": "body",
+            "description": "Information about the user",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/User"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "insered user.",
+            "schema": {
+              "$ref": "#/definitions/User"
+            }
+          }
+        }
+      }
+    },
+    "/authenticate": {
+      "post": {
+        "tags": [
+          "User"
+        ],
+        "description": "Endpoint to authenticate a user",
+        "parameters": [
+          {
+            "name": "newUser",
+            "in": "body",
+            "description": "Information about the user",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/User"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      }
+    },
+    "/{username}": {
+      "get": {
+        "tags": [
+          "User"
+        ],
+        "description": "Endpoint to get all users only Authenticated users",
+        "parameters": [
+          {
+            "name": "username",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      }
     }
   },
   "definitions": {
@@ -305,6 +382,33 @@
       "required": [
         "name",
         "location"
+      ]
+    },
+    "User": {
+      "type": "object",
+      "properties": {
+        "username": {
+          "type": "string",
+          "example": "username"
+        },
+        "password": {
+          "type": "string",
+          "example": "password"
+        },
+        "role": {
+          "type": "object",
+          "properties": {
+            "type": {
+              "type": "string",
+              "example": "Admin"
+            }
+          }
+        }
+      },
+      "required": [
+        "username",
+        "password",
+        "role"
       ]
     }
   }
